@@ -1,3 +1,5 @@
+// $Id$
+
 #include "tao/orbconf.h"
 
 #if (TAO_HAS_MINIMUM_POA == 0) && !defined (CORBA_E_COMPACT) && !defined (CORBA_E_MICRO)
