@@ -1,3 +1,12 @@
+Tue Sep  7 11:34:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/BiDir_GIOP/BiDirGIOP.cpp:
+        * tao/IORManipulation/IORManip_Loader.cpp:
+        * tao/PortableServer/RequestProcessingStrategyServantLocator.cpp:
+        * tao/Strategies/SCIOP_Endpoint.cpp:
+        * tao/Utils/Servant_Var.cpp:
+          Fuzz fixes
+
 Tue Sep  7 10:52:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * PROBLEM-REPORT-FORM:
